--- a/src/app/feature/login-screen/login-screen.component.html
+++ b/src/app/feature/login-screen/login-screen.component.html
@@ -16,6 +16,10 @@
                     [value]="password()" #passwordRef (input)="password.set(passwordRef.value)" />
             </div>
 
+            <label class="form-label text-muted mb-3" style="font-size: 0.9em;">
+                <span style="font-weight: inherit;">(Note: username: testuser & password: test)</span>
+            </label>
+
             <!-- Login Button -->
             <button type="submit" class="btn btn-gradient w-100">
                 Login
